fix: Home page layout. Removed database file. Made mobber div wider on tablets.

--- a/src/components/Mobbers.scss
+++ b/src/components/Mobbers.scss
@@ -61,7 +61,7 @@
     }
 
     @media screen and (min-width: 768px) {
-        width: 8.3rem;
+        width: 11rem;
     }
 
     &:not(:last-child) {
